--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "draft-js": "^0.11.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
