--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "draft-js": "^0.11.7",
+    "immutable": "^4.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-draft-wysiwyg": "^1.14.7",
