buildspec updated with invalidation

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,10 @@ phases:
   build:
     commands:
       - npm run build
+  post_buid:
+    commands:
+      - - aws cloudfront create-invalidation --distribution-id={E1JCQX6Q5R4J8A} --paths '/*'
+
 
 artifacts:
   files:
