--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ version: 0.2
 phases:
   pre_build:
     commands:
+      - npm install react-draft-wysiwyg --forced
       - npm install
   build:
     commands:
