--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,3 +1,5 @@
+# https://gist.github.com/miguelmota/fd35d253e5b3293e042198e4dc0823fb
+
 version: 0.2
 
 phases:
@@ -10,7 +12,7 @@ phases:
       - npm run build
   post_build:
     commands:
-      - aws cloudfront create-invalidation --distribution-id={E1JCQX6Q5R4J8A} --paths '/*'
+      - aws cloudfront create-invalidation --distribution-id=E1JCQX6Q5R4J8A --paths '/*'
 
 
 artifacts:
