--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 FAST_REFRESH=false
-REACT_APP_ENDPOINT=https://pozpyknv3blczg6dofyeechdny0lqmvw.lambda-url.us-east-1.on.aws/
+REACT_APP_ENDPOINT=wss://1yryn2nkab.execute-api.us-east-1.amazonaws.com/dev
